Service processor and project structure refactor